Finalizando criacao de usuarios e autenticacao de usuarios

--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -8,7 +8,8 @@
      "baseUrl": "./src",   
      "paths": {
        "@shared/*": ["shared/*"],
-       "@modules/*": ["modules/*"]
+       "@modules/*": ["modules/*"],
+       "@config/*": ["config/*"]
      },                    
      "esModuleInterop": true,                  
      "experimentalDecorators": true,        
