--- a/back-end/ormconfig.json
+++ b/back-end/ormconfig.json
@@ -1,9 +1,10 @@
 {
     "type": "postgres",
-    "host": "localhost",
     "port": 5432,
+    "host": "localhost",
     "username": "postgres",
     "password": "postgres",
+    "database": "openet",
     "entities": [
       "./src/modules/**/entities/*.ts"
     ],
