--- a/back-end/package.json
+++ b/back-end/package.json
@@ -22,7 +22,8 @@
     "redis": "^3.1.2",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.4.0",
-    "typeorm": "^0.2.31"
+    "typeorm": "^0.2.31",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
@@ -32,6 +33,7 @@
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.35",
     "@types/nodemailer": "^6.4.1",
+    "@types/uuid": "^8.3.0",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.3"
